@@ -36,6 +36,8 @@ title-mining-recipe=Abbauvorschrift
 title-boiling-recipe=Erhitzungsvorschrift
 title-resource=Resource
 title-entity=Object
+title-burning-recipe=Verbrennungsprozess
+title-rocket-launch-recipe=Bilanz eines Raketenstarts
 missing-text-for-search-1=[img=ingteb] Für {1=__1__ Gegenstand|rest=__1__ Gegenstände} liegen noch keine Übersetzungen vor.  
 missing-text-for-search-3=[img=ingteb] Sollte das Problem nach mehreren Versuchen nicht verschwinden, bitte sende ein Logfile an den Entwickler (siehe Mod-Portal).
 workers-for-recipes=Produzenten, die diese Baupläne verarbeiten können
