@@ -38,6 +38,8 @@ title-mining-recipe=mining recipe
 title-boiling-recipe=boiling recipe
 title-resource=resource
 title-entity=entity
+title-burning-recipe=burning recipe
+title-rocket-launch-recipe=rocket launch recipe
 missing-text-for-search-1= [img=ingteb] Translations are not yet available for __1__ items. 
 missing-text-for-search-3= [img=ingteb] If the problem does not disappear after several attempts, please send a logfile to the developer (see mod portal).
 workers-for-recipes=Workers that can produce this recipes
